Fixed a bug where an ending slash would crash your app

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -66,3 +66,14 @@ UserProfileData:
       type: array
       items:
         type: OGM
+    persons:
+      type: array
+      items:
+        type: Person
+Person:
+  path: user/person/
+  type: object
+  properties:
+    firstName:
+      required: true
+      type: string
