--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,12 +8,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.0.2
-  json_serializable: ^3.2.5
+  provider: ^4.0.5+1
+  json_serializable: ^3.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.7.3
+  build_runner: ^1.9.0
   model_generator:
     path: ../
+
+dependency_overrides:
+  path: 1.7.0 #Because model_generator >=1.2.0 depends on path ^1.7.0 and every version of flutter_test from sdk depends on path 1.6.4, model_generator >=1.2.0 is incompatible with flutter_test from sdk.
