Updated README.md Updated example Fixed missing file Allow jsonKey and jsonkey

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -19,6 +19,9 @@ OGM:
     some_ThinG_huGE:
       required: true
       type: string
+    securityRole:
+      type: string
+      jsonKey: securityIndicator
 Testing:
   path: user
   type: object
