#28 & #26 refactored some code. Added the custom fromJson & toJson properties.

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -38,6 +38,8 @@ Testing:
       type: string
     duration:
       type: Duration
+    duration_from_json_test:
+      type: DurationFromToJson
 UserProfileData:
   path: user/profile
   type: object
@@ -108,6 +110,9 @@ Gender:
 Duration:
   path: data/custom/
   type: custom
+DurationFromToJson:
+  path: data/custom/
+  type: custom_from_to_json
 
 
 
