Added includeIfNull to UserProfileData, field offTrack

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -66,6 +66,7 @@ UserProfileData:
       required: true
       type: OGM
     offTrack:
+      includeIfNull: false
       type: array
       items:
         type: string
