#31: Added support for custom directory (refactor from @JeremiFerre)

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -36,6 +36,8 @@ Testing:
       type: string
     beneficiaryIBAN:
       type: string
+    dynamicField:
+      type: dynamic
     duration:
       type: Duration
     duration_from_json_test:
@@ -114,7 +116,17 @@ Duration:
 DurationFromToJson:
   path: data/custom/
   type: custom_from_to_json
-
+CustomBaseDirectoryObj:
+  base_directory: custom_model_directory
+  path: article
+  properties:
+    name:
+      type: string
+NoCustomBaseDirectoryObj:
+  path: article
+  properties:
+    customBaseDirectoryObj:
+      type: CustomBaseDirectoryObj
 
 
 
