Support non-final fields

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -22,6 +22,9 @@ OGM:
     securityRole:
       type: string
       jsonKey: securityIndicator
+    mutableProperty:
+      type: string
+      non_final: true
 Testing:
   path: user
   type: object
