Support adding custom annotations for conversion Support paths with package definitions (package:...) Support full path specifications with .dart postfix (package:path/path.dart or path/path.dart)

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -1,5 +1,7 @@
 OGM:
   type: object
+  converters:
+    - DateTimeConverter
   properties:
     structuredMessage:
       required: true
@@ -25,6 +27,8 @@ OGM:
     mutableProperty:
       type: string
       non_final: true
+    dateChange:
+      type: datetime
 Testing:
   path: user
   type: object
@@ -131,7 +135,9 @@ NoCustomBaseDirectoryObj:
     customBaseDirectoryObj:
       type: CustomBaseDirectoryObj
 
-
+DateTimeConverter:
+  type: json_converter
+  path: converter/
 
 
 
