Added unkown enum value property

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -92,6 +92,7 @@ Person:
       type: string
     gender:
       required: true
+      unknownEnumValue: X
       type: Gender
 Gender:
   path: user/person/
