--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,9 @@ addons:
       - fonts-droid-fallback
 
 before_install:
-  - chmod +x ./tool/test.sh
+  - chmod +x ./tool/travis/analyze.sh
+  - chmod +x ./tool/travis/test.sh
+  - chmod +x ./tool/travis/format.sh
 
 sudo: required
 
@@ -29,13 +31,13 @@ jobs:
   include:
     - stage: quality
       name: "Tests"
-      script: ./tool/test.sh
+      script: ./tool/travis/test.sh || exit -1
     - stage: quality
       name: "Analyze"
-      script: flutter analyze || exit -1;
+      script: ./tool/travis/analyze.sh || exit -1
     - stage: quality
       name: "Format"
-      script: flutter pub global run dart_style:format -n --set-exit-if-changed . || exit -1;
+      script: ./tool/travis/format.sh || exit -1
 
 stages:
   - quality
