Implemented the nullsafe support

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -96,7 +96,7 @@ Person:
       type: string
     gender:
       required: true
-      unknownEnumValue: X
+      unknown_enum_value: X
       type: Gender
 Gender:
   path: user/person/
