--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,23 +3,20 @@ description: A project used to demo the model generator
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.2.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.0.5+1
-  json_serializable: ^3.3.0
+  json_serializable: ^4.0.2
+  provider: ^5.0.0
 
 dev_dependencies:
+  build_runner: ^1.11.5
   flutter_test:
     sdk: flutter
-  build_runner: ^1.9.0
   model_generator:
     path: ../
-
-dependency_overrides:
-  path: 1.7.0 #Because model_generator >=1.2.0 depends on path ^1.7.0 and every version of flutter_test from sdk depends on path 1.6.4, model_generator >=1.2.0 is incompatible with flutter_test from sdk.
 
 #This is the default config
 #In the model_generator/config.yaml you will see a object with a custom base_directory
