Fixed the includeIfNull

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -75,7 +75,7 @@ UserProfileData:
       required: true
       type: OGM
     offTrack:
-      includeIfNull: false
+      include_if_null: false
       type: array
       items:
         type: string
