#64: Added support for generics

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -140,6 +140,16 @@ DateTimeConverter:
   type: json_converter
   path: converter/
 
+Project:
+  path: user/project/
+  type: object
+  generate_for_generics: true
+  properties:
+    name:
+      required: true
+      type: string
+    cost:
+      type: double
 
 
 
