Add support for map type Implements #67 Fixed example no longer working due to wrong handleDurationFromToJsonToJson

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -87,6 +87,11 @@ UserProfileData:
       type: array
       items:
         type: Person
+    personsById:
+      type: map
+      items:
+        key: String
+        value: Person
 Person:
   path: user/person/
   type: object
