Allow equals_and_hash_code to be overriden in object

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -38,6 +38,7 @@ Testing:
   type: object
   extra_imports:
   extra_annotations:
+  equals_and_hash_code: false
   properties:
     isFavourite:
       ignore: true
