Allow configuration per object

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -39,6 +39,7 @@ Testing:
   extra_imports:
   extra_annotations:
   equals_and_hash_code: false
+  to_string: false
   properties:
     isFavourite:
       ignore: true
