#83: Added the explicit to json implementation

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -64,6 +64,7 @@ Testing:
 UserProfileData:
   path: user/profile
   type: object
+  explicit_to_json: true
   properties:
     firstName:
       required: true
