#81: If null should be set to false by default

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -93,6 +93,7 @@ UserProfileData:
       items:
         type: string
     onTrack:
+      include_if_null: true
       type: array
       items:
         type: OGM
