--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: model_generator
 description: Dart tool to automaticly generate models from a yml file to speed up your development flow.
-version: 5.2.0
+version: 5.3.0
 homepage: https://github.com/icapps/flutter-model-generator
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  args: ^2.0.0
+  args: ^2.3.0
   meta: ^1.3.0
   path: ^1.8.0
   yaml: ^3.1.0
@@ -15,3 +15,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  lints: ^1.0.1
