--- a/.pubignore
+++ b/.pubignore
@@ -4,3 +4,9 @@ tool
 .travis.yml
 coverage/
 example/.metadata
+example/android/gradle/wrapper/
+example/android/gradlew
+example/android/gradlew.bat
+example/ios/Podfile.lock
+test/
+build/
