Add support for default values.
Fixes #54

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -172,8 +172,10 @@ Project:
     name:
       required: true
       type: string
+      default_value: "'test'"
     cost:
       type: double
+      default_value: 0.2
 
 
 
