--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_generator
 description: Dart tool to automaticly generate models from a yml file to speed up your development flow.
-version: 5.8.0
+version: 5.8.1
 homepage: https://github.com/icapps/flutter-model-generator
 
 environment:
@@ -10,9 +10,9 @@ dependencies:
   args: ^2.3.0
   meta: ^1.3.0
   path: ^1.8.0
+  pub_semver: ^2.1.0
   yaml: ^3.1.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  test: 1.19.5
   lints: ^1.0.1
