Support inline type definitions
Removed fvm
Updated dart version + libraries

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -7,9 +7,7 @@ OGM:
   extra_imports:
     -
   properties:
-    structuredMessage:
-      required: true
-      type: string
+    structuredMessage: string?
     beneficiary:
       required: true
       type: string
@@ -37,6 +35,8 @@ OGM:
       type: array
       items:
         type: List<Testing>
+    simpleFields: List<Testing>
+    simpleMap: Map<String, Testing>?
 
 Testing:
   path: user
