--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,13 +6,15 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  drift: ^2.3.0 # This is added since we can now generate database tables
   flutter:
     sdk: flutter
-  json_serializable: ^5.0.1
+  json_serializable: ^6.5.4
   provider: ^6.0.0
 
 dev_dependencies:
   build_runner: ^2.1.2
+  drift_dev: ^2.3.3
   flutter_test:
     sdk: flutter
   model_generator:
