Added the ability to have optional or required fields not in the table, but set in getModel

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -185,3 +185,15 @@ Book:
     price: double?
     pages: int?
     isAvailable: bool
+    authors:
+      type: array
+      required: true # this is required, so will be added to the getModel method as required
+      ignore_for_table: true
+      items:
+        type: Person
+    publishers:
+      type: array
+      required: false # this is NOT required, so will be added to the getModel method as optional
+      ignore_for_table: true
+      items:
+        type: Person
