Fixed issue with two fields same enum creating two converters in the same file

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -201,6 +201,7 @@ Book:
       items:
         type: Person
     category: BookCategory
+    secondCategory: BookCategory?
 
 BookCategory:
   path: book/
