--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -179,6 +179,7 @@ Project:
 Book:
   path: book/
   generate_drift_table: true
+  generate_drift_dao_storage: true
   extra_imports_for_table:
     - 'package:model_generator_example/util/converters/string_list_converter.dart'
   properties:
