Added double_status, updated enum_model_gen and tests

--- a/example/model_generator/enums.yaml
+++ b/example/model_generator/enums.yaml
@@ -34,3 +34,19 @@ Status:
       value: 2
     status_3:
       value: 3
+
+DoubleStatus:
+  path: status
+  type: enum
+  item_type: double
+  generate_map: true
+  generate_extensions: true
+  properties:
+    status_0:
+      value: 0.0
+    status_1:
+      value: 1.0
+    status_2:
+      value: 2.0
+    status_3:
+      value: 3.0
