--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -8,13 +8,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  json_serializable: ^6.6.1
+  json_annotation: ^4.8.1
   provider: ^6.0.5
 
 dev_dependencies:
-  build_runner: ^2.3.3
+  build_runner: ^2.4.4
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.7.0
   model_generator:
     path: ../
 
