--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: model_generator
-description: Dart tool to automaticly generate models from a yml file to speed up your development flow.
-version: 6.2.1
+description: Dart tool to automatically generate models from a yml file to speed up your development flow.
+version: 6.3.0
 homepage: https://github.com/icapps/flutter-model-generator
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-  args: ^2.3.0
-  meta: ^1.3.0
-  path: ^1.8.0
-  pub_semver: ^2.1.0
-  yaml: ^3.1.0
+  args: ^2.4.1
+  meta: ^1.9.1
+  path: ^1.8.3
+  pub_semver: ^2.1.4
+  yaml: ^3.1.2
 
 dev_dependencies:
-  test: 1.21.6
-  lints: ^2.0.0
+  test: ^1.24.3
+  lints: ^2.1.1
