#130: force enum to lowercase by default

--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -107,7 +107,7 @@ Person:
     firstName:
       type: String
     gender:
-      unknown_enum_value: X
+      unknown_enum_value: x
       type: Gender
 
 Duration:
@@ -149,7 +149,7 @@ Project:
       default_value: 0.2
     status:
       type: Status?
-      unknown_enum_value: STATUS_0
+      unknown_enum_value: status_0
 
 ProjectWrapper:
   path: user/project/
