--- a/example/model_generator/config.yaml
+++ b/example/model_generator/config.yaml
@@ -149,7 +149,7 @@ Project:
       default_value: 0.2
     status:
       type: Status?
-      unknown_enum_value: status_0
+      unknown_enum_value: status0
 
 ProjectWrapper:
   path: user/project/
